--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,1 @@
-{
-  "$schema": "https://openapi.vercel.sh/vercel.json",
-  "github": {
-    "autoAlias": false
-  }
-}
+{"$schema":"https://openapi.vercel.sh/vercel.json","github":{"autoAlias":false}}
